business and matrimony done

--- a/src/pages/business/business.html
+++ b/src/pages/business/business.html
@@ -21,7 +21,7 @@
 
   </ion-navbar>
   <div class="search-box">
-      <ion-searchbar></ion-searchbar>
+    <ion-searchbar (ionInput)="searchUser($event)"></ion-searchbar>
 
   </div>
 </ion-header>
@@ -35,7 +35,47 @@
 
   <div class="pad-page-10 mrg-t-65">
       <ion-grid class="">
-          <ion-row>
+          <ion-row *ngFor="let item of businessUsers" (click)="userDetails(item.id)">
+              <div class="new-box">
+                  <div class="new-img-box">
+                      <div class="img-box">
+                          <img src="assets/imgs/new-img-1.jpg">
+                      </div>
+
+                      <div class="new-cuntent-box">
+                          <h3>{{item.firstname}} {{item.lastname}}</h3>
+
+                      </div>
+                  </div>
+
+              </div>
+              <!-- <div class="new-box">
+                  <div class="new-img-box">
+                      <div class="img-box">
+                          <img src="assets/imgs/new-img-1.jpg">
+                      </div>
+
+                      <div class="new-cuntent-box">
+                          <h3>Business Headline</h3>
+
+                      </div>
+                  </div>
+
+              </div>
+              <div class="new-box">
+                  <div class="new-img-box">
+                      <div class="img-box">
+                          <img src="assets/imgs/new-img-1.jpg">
+                      </div>
+
+                      <div class="new-cuntent-box">
+                          <h3>Business Headline</h3>
+
+                      </div>
+                  </div>
+
+              </div>
+
               <div class="new-box">
                   <div class="new-img-box">
                       <div class="img-box">
@@ -74,47 +114,7 @@
                       </div>
                   </div>
 
-              </div>
-
-              <div class="new-box">
-                  <div class="new-img-box">
-                      <div class="img-box">
-                          <img src="assets/imgs/new-img-1.jpg">
-                      </div>
-
-                      <div class="new-cuntent-box">
-                          <h3>Business Headline</h3>
-
-                      </div>
-                  </div>
-
-              </div>
-              <div class="new-box">
-                  <div class="new-img-box">
-                      <div class="img-box">
-                          <img src="assets/imgs/new-img-1.jpg">
-                      </div>
-
-                      <div class="new-cuntent-box">
-                          <h3>Business Headline</h3>
-
-                      </div>
-                  </div>
-
-              </div>
-              <div class="new-box">
-                  <div class="new-img-box">
-                      <div class="img-box">
-                          <img src="assets/imgs/new-img-1.jpg">
-                      </div>
-
-                      <div class="new-cuntent-box">
-                          <h3>Business Headline</h3>
-
-                      </div>
-                  </div>
-
-              </div>
+              </div> -->
           </ion-row>
       </ion-grid>
 
