--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
               </ion-col>
               <ion-col col-2>
                   <div class="menu-list-img">
-                      <img src="assets/imgs/list-icon.png">
+                      <img src="assets/imgs/list-icon.png" (click)="openPopover()">
                   </div>
               </ion-col>
           </ion-row>
