--- a/src/pages/matrimony-details/matrimony-details.html
+++ b/src/pages/matrimony-details/matrimony-details.html
@@ -3,9 +3,9 @@
       <ion-grid class="no-padding">
           <ion-row>
               <ion-col col-2>
-                  <div class="back-icon-img">
+                  <!-- <div class="back-icon-img">
                       <img src="assets/imgs/back-arrow.png">
-                  </div>
+                  </div> -->
               </ion-col>
 
               <ion-col col-8>
@@ -79,7 +79,7 @@
                   </div>
 
               </div>
-              <div class="new-box">
+              <!-- <div class="new-box">
                   <div class="new-img-box">
                       <div class="img-box">
                           <img src="assets/imgs/new-img-1.jpg">
@@ -147,7 +147,7 @@
 
                       </div>
                   </div>
-              </div>
+              </div> -->
           </ion-row>
       </ion-grid>
 
