--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
               </ion-col>
               <ion-col col-2>
                   <div class="menu-list-img">
-                      <img src="assets/imgs/list-icon.png" (click)="openPopover()">
+                      <ion-icon name="exit" (click)="logout()"></ion-icon> 
                   </div>
               </ion-col>
           </ion-row>
@@ -90,8 +90,23 @@
 
   <div class="pad-page-10 mrg-t-15">
       <ion-grid class="">
-          <ion-row>
+          <ion-row *ngFor="let item of news" (click)="newsDetails(item.id)">
               <div class="new-box">
+                  <div class="new-img-box">
+                      <div class="img-box">
+                          <img src="assets/imgs/new-img-1.jpg">
+                      </div>
+
+                      <div class="new-cuntent-box">
+                          <h3>{{item.title}}</h3>
+                          <div class="date-box"> <img src="assets/imgs/calendar-icon.png"><small> {{item.created}}</small></div>
+                          <p>{{item.description}}<span>Read More</span> </p>
+
+                      </div>
+                  </div>
+
+              </div>
+              <!-- <div class="new-box">
                   <div class="new-img-box">
                       <div class="img-box">
                           <img src="assets/imgs/new-img-1.jpg">
@@ -119,22 +134,7 @@
 
                       </div>
                   </div>
-
-              </div>
-              <div class="new-box">
-                  <div class="new-img-box">
-                      <div class="img-box">
-                          <img src="assets/imgs/new-img-1.jpg">
-                      </div>
-
-                      <div class="new-cuntent-box">
-                          <h3>News Heading title</h3>
-                          <div class="date-box"> <img src="assets/imgs/calendar-icon.png"><small> 30/09/2020</small></div>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse luctus dui sed leo cursus dignissim. <span>Read More</span> </p>
-
-                      </div>
-                  </div>
-              </div>
+              </div> -->
           </ion-row>
       </ion-grid>
 
