--- a/src/pages/user/user-list/user-list.html
+++ b/src/pages/user/user-list/user-list.html
@@ -13,7 +13,7 @@
               </ion-col>
               <ion-col col-2>
                   <div class="menu-list-img">
-                      <img src="assets/imgs/list-icon.png">
+                    <ion-icon name="exit" (click)="logout()"></ion-icon>
                   </div>
               </ion-col>
           </ion-row>
