Search func added

--- a/src/pages/business-info/business-info.html
+++ b/src/pages/business-info/business-info.html
@@ -73,11 +73,10 @@
 
                       <div class="new-cuntent-box">
                           <h3>{{userDetails.firstname}} {{userDetails.lastname}}</h3>
-                          <p>Company Name: </p>
+                          <p>Company Name: Abcd pvt.ltd</p>
                           <p>Address: {{userDetails.present_address}} {{userDetails.city}}</p>
                           <p>Email-id: {{userDetails.emailid}}</p>
                           <p>Profession: {{userDetails.profession}}</p>
-
                       </div>
                   </div>
 
