--- a/src/pages/user/user-info/user-info.html
+++ b/src/pages/user/user-info/user-info.html
@@ -75,7 +75,7 @@
                   <button ion-button round class="login-btn">Business</button>
               </ion-col>
               <ion-col col-6>
-                  <button ion-button round class="login-btn">Matrimoni</button>
+                  <button ion-button round class="login-btn">Matrimony</button>
               </ion-col>
           </ion-row>
       </ion-grid>
