--- a/src/pages/user/user-list/user-list.html
+++ b/src/pages/user/user-list/user-list.html
@@ -13,7 +13,7 @@
               </ion-col>
               <ion-col col-2>
                   <div class="menu-list-img">
-                    <ion-icon name="exit" (click)="logout()"></ion-icon>
+                    <ion-icon name="exit" (click)="logoutAlert()"></ion-icon>
                   </div>
               </ion-col>
           </ion-row>
@@ -21,31 +21,31 @@
 
   </ion-navbar>
   <div class="search-box">
-    <ion-searchbar (ionInput)="searchUser($event)"></ion-searchbar>
+    <ion-searchbar (click)="searchUser($event)"></ion-searchbar>
 
-</div>
+ </div>
 </ion-header>
 
 <ion-content>
 
 
-  <!-- <div class="bg-blue">
-      <h3 class="title-bg-blue">Upcoming News</h3>
-  </div> -->
+  <div class="bg-blue">
+      <h3 class="title-bg-blue">Users</h3>
+  </div>
 
 
 
-  <div class="pad-page-10 mrg-t-15">
+  <div class="pad-page-10 mrg-t-65">
       <ion-grid class="">
           <ion-row *ngFor="let item of userlist">
               <div class="new-box">
                   <div class="new-img-box" (click)="userDetails(item.id)">
                       <div class="img-box">
-                          <img src="assets/imgs/new-img-1.jpg">
+                          <img src="{{imageURL}}{{item.profile_photo}}">
                       </div>
-
+                      <!-- https://s3-sa-east-1.amazonaws.com/mybucket/cp${this.client.id}.jpg -->
                       <div class="new-cuntent-box">
-                          <h3>User Name: {{item.firstname}}</h3><!---->
+                          <h3>{{item.firstname}}</h3>
                           <div class="date-box"> </div>
                       </div>
                   </div>
