--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
                       <div class="user-img">
                           <img src="assets/imgs/user-img.jpg">
                       </div>
-                      <small>User-Name</small>
+                      <small *ngIf="user">{{user.firstname}}</small>
                   </div>
               </ion-col>
               <ion-col col-8>
@@ -16,7 +16,7 @@
               </ion-col>
               <ion-col col-2>
                   <div class="menu-list-img">
-                      <ion-icon name="exit" (click)="logout()"></ion-icon> 
+                      <ion-icon name="exit" (click)="logoutAlert()"></ion-icon> 
                   </div>
               </ion-col>
           </ion-row>
@@ -89,8 +89,8 @@
 
 
   <div class="pad-page-10 mrg-t-15">
-      <ion-grid class="">
-          <ion-row *ngFor="let item of news" (click)="newsDetails(item.id)">
+      <ion-grid class="" *ngIf="news">
+          <ion-row *ngFor="let item of news" (click)="newsDetails(item)">
               <div class="new-box">
                   <div class="new-img-box">
                       <div class="img-box">
@@ -98,9 +98,10 @@
                       </div>
 
                       <div class="new-cuntent-box">
-                          <h3>{{item.title}}</h3>
+                          <h3>Lauren ipsum</h3>
                           <div class="date-box"> <img src="assets/imgs/calendar-icon.png"><small> {{item.created}}</small></div>
-                          <p>{{item.description}}<span>Read More</span> </p>
+                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..<span>Read More</span> </p>
 
                       </div>
                   </div>
@@ -148,10 +149,6 @@
   </div>
 
   <div class="mrg-t-40"></div>
-
-  <button ion-button (click)="logout()">logout
-    <ion-icon  slot="icon-only" name="md-log-out"></ion-icon>
-  </button>
 </ion-content>
 
 
