--- a/src/pages/matrimony/matrimony.html
+++ b/src/pages/matrimony/matrimony.html
@@ -32,7 +32,7 @@
               <div class="new-box">
                   <div class="new-img-box">
                       <div class="img-box">
-                          <img src="assets/imgs/new-img-1.jpg">
+                        <img [src]="url?.serverUrl + 'uploads/profile_images/' + item.profile_photo">
                       </div>
 
                       <div class="new-cuntent-box">
