--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -12,14 +12,10 @@
 
 <ion-content>
   <div class="search-box">
-    <ion-row>
-      <ion-col size="10">
-        <ion-searchbar (ionInput)="searchUser($event)" #searchbar></ion-searchbar>
-      </ion-col>
-      <ion-col size="2">
-        <ion-icon name="close"></ion-icon>
-      </ion-col>
-    </ion-row>
+    <ion-searchbar (ionInput)="searchUser($event)" #searchbar></ion-searchbar>
+    <button ion-button clear icon-only small class="cancelbtn" (click)="goBack()">
+      <ion-icon name="close"></ion-icon>
+    </button>
   </div>
  
 <div class="pad-page-10 mrg-t-65">
