Pages added for update

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
       <ion-grid class="no-padding">
           <ion-row>
               <ion-col col-2>
-                  <div class="user-info-heaser">
+                  <div class="user-info-heaser" (click)="gotoProfile()">
                       <div class="user-img">
                           <img src="assets/imgs/user-img.jpg">
                       </div>
