--- a/src/pages/edit-profile/edit-business-profile/edit-business-step3/edit-business-step3.html
+++ b/src/pages/edit-profile/edit-business-profile/edit-business-step3/edit-business-step3.html
@@ -1,15 +1,69 @@
 <!--
-  Generated template for the EditBusinessStep3Page page.
+  Generated template for the LoginPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
-    <ion-title>edit-business-step3</ion-title>
+    <ion-title>login</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
+
+
+  <div class="login-box-section">
+      <div class="login-box">
+          <div class="logo-box">
+              <img src="assets/imgs/logo-1.jpg">
+          </div>
+
+          <form [formGroup]="businessForm">
+            <ion-list class="login-user-info">
+                
+                <ion-item>
+                  <ion-label>
+                      <ion-icon item-left ios="ios-call" md="md-call"></ion-icon>
+                  </ion-label>
+                  <ion-input type="text" placeholder="Website" ([ngModel])="website" formControlName="website"></ion-input>
+                </ion-item>
+                
+
+                <ion-item>
+                  <ion-label>
+                      <ion-icon item-left ios="ios-call" md="md-call"></ion-icon>
+                  </ion-label>
+                  <ion-input type="text" placeholder="LinkedIn Profile Url" ([ngModel])="linkedin" formControlName="linkedin"></ion-input>
+                </ion-item>
+
+                <ion-item>
+                  <ion-label>
+                      <ion-icon item-left ios="ios-call" md="md-call"></ion-icon>
+                  </ion-label>
+                  <ion-input type="text" placeholder="Facebook Profile Url" ([ngModel])="facebook" formControlName="facebook"></ion-input>
+                </ion-item>
+
+                <ion-item>
+                  <ion-label>
+                      <ion-icon item-left ios="ios-call" md="md-call"></ion-icon>
+                  </ion-label>
+                  <ion-input type="text" placeholder="Instagram Profile Url" ([ngModel])="instagram" formControlName="instagram"></ion-input>
+                </ion-item>
+
+            </ion-list>
+
+            <ion-row>
+              <ion-col>
+                <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
+              </ion-col>
+              <ion-col>
+                <button ion-button round center class="login-btn" (click)="submitDetails(businessForm.value)">Next</button>
+              </ion-col>
+            </ion-row>
+        </form>
+      </div>
+  </div>
+
 
 </ion-content>
