--- a/src/pages/edit-profile/edit-matrimony-profile/edit-matrimony-step3/edit-matrimony-step3.html
+++ b/src/pages/edit-profile/edit-matrimony-profile/edit-matrimony-step3/edit-matrimony-step3.html
@@ -1,15 +1,80 @@
 <!--
-  Generated template for the EditMatrimonyStep3Page page.
+  Generated template for the MarriedRegisterPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-  <ion-navbar>
-    <ion-title>edit-matrimony-step3</ion-title>
-  </ion-navbar>
-</ion-header>
 
 <ion-content padding>
+  <div class="login-box-section">
+    <div class="login-box">
+
+          <form [formGroup]="marriageForm">
+            <ion-list class="login-user-info">
+  
+              <ion-item>
+                <ion-label>
+                  <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-input type="number"  placeholder="Height in cm" formControlName="height"></ion-input>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.commonmessage" >
+                <div *ngIf="marriageForm.get('height').hasError(validation.type) && marriageForm.get('height').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
+  
+              <ion-item>
+                <ion-label>
+                  <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-input type="number"  placeholder="Weight in Kg" formControlName="weight"></ion-input>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.commonmessage" >
+                <div *ngIf="marriageForm.get('weight').hasError(validation.type) && marriageForm.get('weight').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
+  
+              <ion-item>
+                <ion-label>
+                  <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-select interface="popover" placeholder="Skin Tone" formControlName="skin">
+                  <ion-option value="whiteskin">white</ion-option>
+                  <ion-option value="avgskin">Average </ion-option>
+                  <ion-option value="darkskin">Dark</ion-option>
+                </ion-select>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.commonmessage" >
+                <div *ngIf="marriageForm.get('skin').hasError(validation.type) && marriageForm.get('skin').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
+    
+              <ion-item>
+                <ion-label>
+                  <ion-icon item-left ios="ios-person" md="md-person"></ion-icon>
+                </ion-label>
+                <ion-textarea type="text"  placeholder="About" formControlName="about"></ion-textarea>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.commonmessage" >
+                <div *ngIf="marriageForm.get('about').hasError(validation.type) && marriageForm.get('about').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
+  
+            </ion-list> 
+            <ion-row>
+              <ion-col>
+                <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
+              </ion-col>
+              <ion-col>
+                <button ion-button round center class="login-btn" (click)="submitDetails(marriageForm.value)">Next</button>
+              </ion-col>
+            </ion-row>
+      </form>
+    </div>
+  </div>
 
 </ion-content>
