--- a/src/pages/edit-profile/edit-basic-profile/edit-step3/edit-step3.html
+++ b/src/pages/edit-profile/edit-basic-profile/edit-step3/edit-step3.html
@@ -1,15 +1,109 @@
 <!--
-  Generated template for the EditStep3Page page.
+  Generated template for the LoginPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
-    <ion-title>edit-step3</ion-title>
+    <ion-title>login</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
+
+
+  <div class="login-box-section">
+      <div class="login-box">
+
+          <form [formGroup]="signUpForm">
+            <ion-list class="login-user-info">
+
+              <ion-item>
+                <ion-label>
+                    <ion-icon item-left ios="ios-calendar" md="md-calendar"></ion-icon>
+                </ion-label>
+                <ion-input type="text" placeholder=" Select Date of Birth" class="textbox-n" 
+                  onfocus="(this.type='date')"  [(ngModel)]="birthdate" id="date"
+                  formControlName="date_of_birth" displayFormat="DD-MM-YYYY"></ion-input>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.date_of_birth" >
+                <div *ngIf="signUpForm.get('date_of_birth').hasError(validation.type) && signUpForm.get('date_of_birth').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>  
+
+              <ion-item *ngIf="birthdate">
+                <ion-label>
+                  <ion-icon item-left ios="ios-person" md="md-person"></ion-icon>
+                </ion-label>
+                <ion-input type="text" placeholder="Age" formControlName="age"
+                  value="{{ageFromDateOfBirthday(birthdate)}}" readonly></ion-input>
+              </ion-item>
+              <div *ngIf="invalidAgeMsg != 'undefined'" >
+                <div class="error-message">{{invalidAgeMsg}}</div>
+              </div>
+
+              <ion-item>
+                  <ion-label>
+                      <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                  </ion-label>
+                  <ion-select interface="popover" placeholder="Gender" ([ngModel])="gender" formControlName="gender">
+                      <ion-option value="male">Male</ion-option>
+                      <ion-option value="female">Female</ion-option>
+
+                  </ion-select>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.gender" >
+                <div *ngIf="signUpForm.get('gender').hasError(validation.type) && signUpForm.get('gender').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div> 
+
+              <ion-item>
+                  <ion-label>
+                      <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                  </ion-label>
+                  <ion-select interface="popover" placeholder="religion" ([ngModel])="religion" formControlName="religion">
+                      <ion-option value="Hindu">Hindu</ion-option>
+                      <ion-option value="Muslim">Muslim</ion-option>
+                      <ion-option value="Christian">Christian</ion-option>
+                      <ion-option value="Buddhist">Buddhist</ion-option>
+                      <ion-option value="Jain">Jain</ion-option>
+                      <ion-option value="Sikh">Sikh</ion-option>
+                  </ion-select>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.religion" >
+                <div *ngIf="signUpForm.get('religion').hasError(validation.type) && signUpForm.get('religion').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div> 
+              
+              <ion-item>
+                  <ion-label>
+                      <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                  </ion-label>
+                  <ion-input type="text" placeholder="caste" ([ngModel])="caste" formControlName="caste"></ion-input>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.caste" >
+                <div *ngIf="signUpForm.get('caste').hasError(validation.type) && signUpForm.get('caste').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div> 
+
+            </ion-list>
+
+            <ion-row>
+              <ion-col>
+                <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
+              </ion-col>
+              <ion-col>
+                <button ion-button round center class="login-btn" (click)="signUp(signUpForm.value)">Next</button>
+              </ion-col>
+            </ion-row>
+        </form>
+      </div>
+  </div>
+
 
 </ion-content>
