--- a/src/pages/edit-profile/edit-basic-profile/edit-step1/edit-step1.html
+++ b/src/pages/edit-profile/edit-basic-profile/edit-step1/edit-step1.html
@@ -1,15 +1,118 @@
 <!--
-  Generated template for the EditStep1Page page.
+  Generated template for the LoginPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
-    <ion-title>edit-step1</ion-title>
+    <ion-title>login</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
+
+
+  <div class="login-box-section">
+      <div class="login-box">
+
+          <form (ngSubmit)="signUp(signUpForm.value)" [formGroup]="signUpForm">
+            <ion-list class="login-user-info">
+              
+              <ion-row class="gender-box">
+                <ion-col (click)="getPhoto('selfie')" *ngIf="selfie" col-4>
+                    <div class="document-img-box">
+                        <img [src]="selfie">
+                    </div>
+                </ion-col>
+                <ion-col *ngIf="!selfie" (click)="getPhoto('selfie')" col-4>
+                    <div class="document-img-box dotted-border">
+                        <ion-icon ios="ios-add-circle" md="md-add-circle" class="add-img-icon"></ion-icon>
+                    </div>
+                </ion-col>
+            </ion-row>
+  
+            <ion-input formControlName="selfie" [(ngModel)]="selfie" type="text" hidden></ion-input>
+
+                <ion-item>
+                    <ion-label>
+                        <ion-icon item-left ios="ios-person" md="md-person"></ion-icon>
+                    </ion-label>
+                    <ion-input type="text" placeholder="First Name" ([ngModel])="firstName" formControlName="firstName"></ion-input>
+                </ion-item>
+                <div *ngFor="let validation of validation_messages.firstName" >
+                    <div *ngIf="signUpForm.get('firstName').hasError(validation.type) && signUpForm.get('firstName').touched">
+                      <div class="error-message">{{validation.message}}</div>
+                    </div>
+                </div>
+
+                <ion-item>
+                    <ion-label>
+                        <ion-icon item-left ios="ios-person" md="md-person"></ion-icon>
+                    </ion-label>
+                    <ion-input type="text" placeholder="Middle Name" ([ngModel])="middleName" formControlName="middleName"></ion-input>
+                </ion-item>
+                <div *ngFor="let validation of validation_messages.middleName" >
+                    <div *ngIf="signUpForm.get('middleName').hasError(validation.type) && signUpForm.get('middleName').touched">
+                      <div class="error-message">{{validation.message}}</div>
+                    </div>
+                </div>
+
+                <ion-item>
+                    <ion-label>
+                        <ion-icon item-left ios="ios-person" md="md-person"></ion-icon>
+                    </ion-label>
+                    <ion-input type="text" placeholder="Last Name" ([ngModel])="lastName" formControlName="lastName"></ion-input>
+                </ion-item>
+                <div *ngFor="let validation of validation_messages.lastName" >
+                    <div *ngIf="signUpForm.get('lastName').hasError(validation.type) && signUpForm.get('lastName').touched">
+                      <div class="error-message">{{validation.message}}</div>
+                    </div>
+                </div>
+
+                <ion-item>
+                    <ion-label>
+                        <ion-icon item-left name="mail"></ion-icon>
+                    </ion-label>
+                    <ion-input type="email" placeholder="Email" value="{{email}}" ([ngModel])="email" formControlName="email"></ion-input>
+                </ion-item>
+                <div *ngFor="let validation of validation_messages.email" >
+                    <div *ngIf="signUpForm.get('email').hasError(validation.type) && signUpForm.get('email').touched">
+                      <div class="error-message">{{validation.message}}</div>
+                    </div>
+                </div>
+                
+
+                <ion-item>
+                    <ion-label>
+                        <ion-icon item-left ios="ios-call" md="md-call"></ion-icon>
+                    </ion-label>
+                    <ion-input type="number" placeholder="Mobile No 1" ([ngModel])="phone1" formControlName="phone1"></ion-input>
+                </ion-item>
+                <div *ngFor="let validation of validation_messages.phone1" >
+                    <div *ngIf="signUpForm.get('phone1').hasError(validation.type) && signUpForm.get('phone1').touched">
+                      <div class="error-message">{{validation.message}}</div>
+                    </div>
+                </div>
+
+                <ion-item>
+                    <ion-label>
+                        <ion-icon item-left ios="ios-call" md="md-call"></ion-icon>
+                    </ion-label>
+                    <ion-input type="number" placeholder="Mobile No 2(Optional)" ([ngModel])="phone2" formControlName="phone2"></ion-input>
+                </ion-item>
+                <div *ngFor="let validation of validation_messages.phone2" >
+                    <div *ngIf="signUpForm.get('phone2').hasError(validation.type) && signUpForm.get('phone2').touched">
+                      <div class="error-message">{{validation.message}}</div>
+                    </div>
+                </div>
+
+            </ion-list>
+
+          <button ion-button round center class="login-btn">Next</button>
+        </form>
+      </div>
+  </div>
+
 
 </ion-content>
