--- a/src/pages/edit-profile/edit-basic-profile/edit-step4/edit-step4.html
+++ b/src/pages/edit-profile/edit-basic-profile/edit-step4/edit-step4.html
@@ -1,15 +1,146 @@
 <!--
-  Generated template for the EditStep4Page page.
+  Generated template for the LoginPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
-    <ion-title>edit-step4</ion-title>
+    <ion-title>login</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
+
+
+  <div class="login-box-section">
+      <div class="login-box">
+
+          <form [formGroup]="signUpForm">
+            <ion-list class="login-user-info">
+              <ion-item>
+                <ion-label>
+                    <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-select [(ngModel)]="selecteLang" formControlName="langKnown" placeholder="Select Language"  multiple="true">
+                  <span *ngIf='languages'>
+                    <ion-option *ngFor="let lang of languages" [value]="lang.id">{{lang.lang_name}}</ion-option>
+                  </span>
+                </ion-select>
+                  <!-- <button item-end ion-button clear (click)="addLanguage()"><ion-icon name="add"></ion-icon></button>  -->
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.langKnown" >
+                <div *ngIf="signUpForm.get('langKnown').hasError(validation.type) && signUpForm.get('langKnown').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
+
+              <ion-item>
+                <ion-label>
+                    <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-select interface="popover" placeholder="education" ([ngModel])="education" formControlName="education">
+                    <ion-option value="Masters of Arts">M.A</ion-option>
+                    <ion-option value="Masters of Science">M.Sc</ion-option>
+                    <ion-option value="Masters of Commerce">M.Com</ion-option>
+                    <ion-option value="Bachelor of Arts">B.A</ion-option>
+                    <ion-option value="Bachelor of Science">B.Sc</ion-option>
+                    <ion-option value="Bachelor of Commerce">B.Com</ion-option>
+                    <ion-option value="B.Sc Agri">B.Sc Agri</ion-option>
+                    <ion-option value="B.Tech">B.Tech</ion-option>
+                    <ion-option value="M.Tech">M.Tech</ion-option>
+                    <ion-option value="B.Engg">B.E</ion-option>
+                    <ion-option value="I.T.I">I.T.I</ion-option>
+                    <ion-option value="M.Engg">M.E</ion-option>
+                </ion-select>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.education" >
+                <div *ngIf="signUpForm.get('education').hasError(validation.type) && signUpForm.get('education').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div> 
+
+              <ion-item>
+                <ion-label>
+                    <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-select interface="popover" placeholder="Annual Income" ([ngModel])="annual_income" formControlName="annual_income">
+                    <ion-option value="lessThanEightLac">Less than 8 lac</ion-option>
+                    <ion-option value="8-10lac">8 to 10 lac</ion-option>
+                    <ion-option value="10-12lac">10 to 12 lac</ion-option>
+                    <ion-option value="moreThan12Lac">12 and above</ion-option>
+                </ion-select>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.annual_income" >
+                <div *ngIf="signUpForm.get('annual_income').hasError(validation.type) && signUpForm.get('annual_income').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div> 
+
+              <ion-item>
+                <ion-label>
+                  <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-input type="text" placeholder="Add Hobby"
+                value="{{listHobby}}" multiple="true" readonly
+                formControlName="hobbies"></ion-input>
+               <!-- <ion-select [(ngModel)]="SelecteHobby" formControlName="hobbies" placeholder="Select Hobby"  multiple="true">
+                  <ion-option  *ngFor="let hobby of listHobby">{{hobby}}</ion-option>
+                  </ion-select>
+                  You Selected = {{SelecteHobby}}-->
+                  <button item-end clear ion-button (click)="addHobby()"><ion-icon name="add"></ion-icon></button> 
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.hobbies" >
+                <div *ngIf="signUpForm.get('hobbies').hasError(validation.type) && signUpForm.get('hobbies').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
+
+              <ion-item>
+                <ion-label>
+                    <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-select interface="popover" placeholder="Marital Status" ([ngModel])="marital_status" formControlName="marital_status">
+                  <ion-option value="Never_Married">Never Married</ion-option>  
+                  <ion-option value="Married">Married</ion-option>
+                    <ion-option value="Unmarried">Unmarried</ion-option>
+                    <ion-option value="Divorced">Divorced or widowed</ion-option>
+                </ion-select>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.marital_status" >
+                <div *ngIf="signUpForm.get('marital_status').hasError(validation.type) && signUpForm.get('marital_status').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
+
+              <ion-item>
+                <ion-label>
+                    <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-select interface="popover" placeholder="Profession" ([ngModel])="profession" formControlName="profession">
+                    <ion-option value="Job">Job</ion-option>
+                    <ion-option value="Unemployed">Unemployed</ion-option>
+                    <ion-option value="Business">Business</ion-option>
+                </ion-select>
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.profession" >
+                <div *ngIf="signUpForm.get('profession').hasError(validation.type) && signUpForm.get('profession').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
+
+            </ion-list>
+
+            <ion-row>
+              <ion-col>
+                <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
+              </ion-col>
+              <ion-col>
+                <button ion-button round center class="login-btn" (click)="signUp(signUpForm.value)">Next</button>
+              </ion-col>
+            </ion-row>
+        </form>
+      </div>
+  </div>
 
 </ion-content>
