--- a/src/pages/business/business.html
+++ b/src/pages/business/business.html
@@ -3,9 +3,12 @@
       <ion-grid class="no-padding">
           <ion-row>
               <ion-col col-2>
-                  <!-- <div class="back-icon-img">
-                      <img src="assets/imgs/back-arrow.png">
-                  </div> -->
+                <div class="user-info-heaser" (click)="gotoProfile()">
+                    <div class="user-img">
+                        <img src="assets/imgs/user-img.jpg">
+                    </div>
+                    <small *ngIf="user">{{user.firstname}}</small>
+                </div>
               </ion-col>
               <ion-col col-8>
                   <h2 class="header-title-2">Business</h2>
