--- a/src/pages/matrimony/matrimony.html
+++ b/src/pages/matrimony/matrimony.html
@@ -3,10 +3,16 @@
       <ion-grid class="no-padding">
           <ion-row>
               <ion-col col-2>
+                    <div class="user-info-heaser" (click)="gotoProfile()">
+                        <div class="user-img">
+                            <img src="assets/imgs/user-img.jpg">
+                        </div>
+                        <small *ngIf="user">{{user.firstname}}</small>
+                    </div>
+                </ion-col>   
                   <!-- <div class="back-icon-img">
                       <img src="assets/imgs/back-arrow.png">
                   </div> -->
-              </ion-col>
               <ion-col col-8>
                   <h2 class="header-title-2">Matrimony</h2>
 
